mejora de interfaces y completo el modulo de convenios

--- a/LabWebAppBlazor/Components/Layout/NavMenu.razor
+++ b/LabWebAppBlazor/Components/Layout/NavMenu.razor
@@ -63,6 +63,12 @@
         </div>
 
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="convenios" Match="NavLinkMatch.All">
+                <span class="bi bi-list-nested-nav-menu oi oi-people" aria-hidden="true"></span> Convenios
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="cuentasporcobrar" Match="NavLinkMatch.All">
                 <span class="bi bi-list-nested-nav-menu oi oi-people" aria-hidden="true"></span> Cuentas por Cobrar
             </NavLink>
